test_suite/alan-2022-examples/failing/003830_mutation.alan
source u begin if source then relax end end
